sort.baseball.lessons.sort.baseball.NaiveBaseball.scala.error
NaiveBaseball:8: error: not found: value joueurbase
  if (Math.abs(joueurbase-base)>=Math.abs(joueurDeux-base)) return 0
               ^