sort.baseball.lessons.sort.baseball.NaiveBaseball.scala.code
def baseATester : Int = {
 return (getTrouBase()+1)%getNombreBases()
}

def buggleADeplacer (base : Int) : Int = {
  val joueurUn = getCouleurJoueur(base,0)
  val joueurDeux = getCouleurJoueur(base,1)
  if (Math.abs(joueurbase-base)>=Math.abs(joueurDeux-base)) return 0
  else return 1
  
}

override def run() {
  while (!estTrie()) {
    deplace(baseATester,buggleADeplacer(baseATester))
  }
}